# rust-monzo

./: .gitignore  Cargo.toml  Monzo API.paw  README.md  beancount.toml  beancount.yaml  categories.yaml
.sqlx/: query-0541534c44553eeed40824155d402ae3615305c104f8fb110ab90c3a688a1718.json  query-0bde80e8411cafb6a17c562d565a514659e41fbcaab7c1284acce169ca1671a5.json  query-1c9925bdb71e5413165263b77be992e949a155a3d2445909f2c993b4e95aed5f.json  query-28493e4b0583f8377d87264676f4510963913ae71358071a94c28380b752cb12.json  query-374f9974538de87ef29c0d936b8484226ed8b4eb7945941de3e74c7e95f21a16.json  query-40dd16749bd9dc44523c2192bf070934c8c37896c74236b3774b12c37f730ecd.json  query-4739d68df44eaa8cb32f3aa1e4e24381190e8c6c6b566723ceaba569572d188f.json  query-489e1b50e2c945dd4189faa429144d163262575a7fa48eb5495d52dbedeb8939.json  query-4a00f5fb42cb230ef8442f5bc266f59b2e88b20fa3955637c209b7f5ea1714f7.json  query-4a2413b81de61b61b504d2a495c22cb003f322e306ec7f173a0f841150ab3e04.json  query-4c8c30c2cf63ff28ce2dd361dee8b0c709f3b688c5b8a3c70340e0db95b0ba31.json  query-4e16af66bb223cdb037c939806dd2ff056aecbd49ca6ead1378d6fe129ea2a07.json  query-52ee8a5c8baa2ca903d12e6b2986a511699cb5f0c9b9e03fa384d90f3b272303.json  query-5bc52b6751e8032027f251357e66222b53288744f0125698c4579fd58cd23e5e.json  query-6243a89a187189d6e302e0c04d56308b95c3ac5a018926036e23657567a10699.json  query-6c2d1c3df4524c19cf1834bbd08a7c107c6845c61b83d2bab2154127ea274166.json  query-7f27c10b991564a5e768e881fe7e39ef347f97aa8c93c14803cded0a3bf84b56.json  query-83839546dce5214cadd6f6af3b869ead99139fc1ff75493546abe696bdaff6e4.json  query-8912b373429e65ece07a890d67525ec8a55f1c7f42a23151b5e4d5d8fffc35c9.json  query-8cf97204981249e836df77f62d1b70ac98434b5a1e1739b4507d7358db6c32dc.json  query-8fc16b0c394a45bbe38bcb4fc509a0ebda89688b79a0db0fab6b6672718a584c.json  query-a21509647f9331e754e269e8ba89703838afdf6f89325daf5e3c7c8e8d907ed2.json  query-a757f5338f712af62d4b9f2694024d5f988617cf9fd3a0753efed9af30a45dd2.json  query-b94baa6c3b62e3dae112539c17aefc34e8c90fc49fd08ef6036d1c322b48476e.json  query-be7aa9f237dd59fd50c2f423f85fe64d96119f3ff65e102c403a2784e05f31e7.json  query-c5082849e3d65e5fbd1f14df767790ac1c95e32a2e04667920d71bcfd86b03ec.json  query-d6e4c19092d0d50ed49871936069bb71612aa81be1ac3c3f9cdaf100beb27baf.json  query-d8f9e66b6fc63603809bd4774da01a75751d4a2b653e5c0a8948e76b6952d6bf.json  query-de603ed012d772899d896ed5b1f7207200f3ee7795ce7488a7230ec854ab4063.json  query-e569baa9f59ac581440f6f4ee7504f86e6ab9c8bba01f731bcc1efecca33a6d1.json  query-e7b48af09149af84b447b32aa46beb818b1feb022af87d9d4c05394f3973a2c2.json  query-ee055a1d0555ab258547c4635c93f6c2f909130f67b5c72ba736b84f79397453.json  query-fc59b822161ca9e34390d6bc3d4e8914eaf884a5f653d7beaa9a2f4ed195c7bb.json
migrations/: 20240609171413_init.sql
src/: auth.rs  beancount.rs  configuration.rs  error.rs  lib.rs  main.rs  routes.rs  telemetry.rs
src/beancount/: account.rs  directive.rs  equity.rs  expense.rs  mod.rs  transaction.rs
src/cli/: mod.rs
src/client/: accounts.rs  auth.rs  balance.rs  balances.rs  mod.rs  pots.rs  (+2 more)
(+15 files in other folders)
