[package]
name = "monzo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.4", features = ["json"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4"] }
webbrowser = "1.0.1"
