[package]
name = "monzo"
version = "0.1.0"
edition = "2021"
default-run = "monzo"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.6", features = ["derive"] }
config = "0.14.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.4", features = ["json"] }
rusty-money = "0.4.1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "uuid",
    "chrono",
    "macros",
] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4"] }
webbrowser = "1.0.1"
async-trait = "0.1.80"
